Removed hidden overflow from navbar (was causing issues on iOS

--- a/src/stylus/components/ui/navbar.styl
+++ b/src/stylus/components/ui/navbar.styl
@@ -4,7 +4,6 @@
 .navbar
   padding s-2 s1
   background-color white
-  overflow-x hidden
   display flex
   align-items center
   justify-content space-between
